examples/test/testpolicy3907.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3907
  namespace: namespace301
spec:
  podSelector:
    matchLabels:
      key30: value6
      key2: value15
      key25: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value34
      podSelector:
        matchLabels:
          key2: value23
          key3: value12
